# financeiro

./: .gitignore  Cargo.toml  README.md
dashfiles/: chart-area.js  chart-column.js  chart-line.js  chart-multiline.js  chart-pie.js  dividas.js  exemplo.html  gasto-por-conta.js  index.html  script.js  style.css  styles.css
dashfiles/data/: dividas.js  gasto_por_conta.js  paises.js  resumo.js
dashfiles/script/: dividas.js  gasto-por-categoria-ano.js  gasto-por-categoria.js  gasto-por-conta.js  index.js  orientacoes.js  resumo.js
docs/: context.md  debitos-tecnicos.md  diario.md
src/: app.rs  categoria.rs  categorizador.rs  config_log.rs  estilo.rs  file.rs  lancamento.rs  main.rs  ofx.rs  regra.rs
src/calc/: calc_dividas.rs  calc_gasto_por_categoria.rs  calc_gasto_por_categoria_ano.rs  calc_gasto_por_categoria_mes.rs  calc_gasto_por_conta.rs  calc_lancamentos_filtros.rs  calc_orientacoes.rs  calc_resumo.rs  mod.rs
src/componentes/: check_wgt.rs  input_wgt.rs  lista_suspensa.rs  mod.rs
src/dto/: banco_dto.rs  categoria_dto.rs  catetogia.rs  catetogia_dto.rs  configuracao_dto.rs  conta_dto.rs  divida_dto.rs  divida_mes_dto.rs  fluxo_regra_dto.rs  grupo_despesa_dto.rs  lancamento.rs  lancamento_dto.rs  lazy.rs  meta_dto.rs  mod.rs  nova_regra.rs  nova_regra_dto.rs  optional_lazy.rs  parcela_divida_dto.rs  regra.rs  regra_dto.rs  tipo_despesa_dto.rs  tipo_fluxo_dto.rs
src/repository/: banco_repy.rs  categoria.rs  categoria_repy.rs  categorizador.rs  categorizador_repy.rs  configuracao_repy.rs  dash_repy.rs  divida_mes_repy.rs  divida_repy.rs  file_repy.rs  (+8 more)
(+30 files in other folders)
