[package]
name = "financeiro"
version = "0.12.0"
edition = "2021"

[dependencies]
chardet = "0.2.4"
chrono = { version = "0.4.38", features = ["serde"] }
color-eyre = "0.6.3"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
hex = "0.4.3"
homedir = "0.3.4"
include_dir = "0.7.4"
itertools = "0.13.0"
log = "0.4.22"
log4rs = "1.3.0"
ratatui = "0.28.1"
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.12.0"
sha1 = "0.10.6"
